# cli

./: Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
src/commands/create/: execute.rs  input.rs
src/commands/run/: execute.rs  input.rs
src/utils/: watchexec.rs
