[package]
name = "sword-cli"
version = "0.1.0"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "A CLI tool to create and manage Sword web framework projects"

[dependencies]
inquire = "0.9.1"
clap = { version = "4.5.48", features = ["derive"] }
zip = "5.1.1"
reqwest = "0.12.23"
anyhow = "1.0.100"
which = "8.0.0"
tokio = { version =  "1.47.1", features = ["full"] }
